[Patch][QA v4.9.105] silence numpy reload warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 markers =
     unit: unit test markers
     integration: integration test markers
+filterwarnings =
+    ignore:The NumPy module was reloaded.*:UserWarning
